exports[`AppTest Renders TextSelector 1`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "onSelect": [Function bound onTextSelected]
  },
  "ref": null,
  "type": [Function TextSelector]
}
`;

exports[`AppTest Renders Typer after text is set 1`] = `
Object {
  "$$typeof": Symbol(react.element),
  "_owner": null,
  "_store": Object {},
  "key": null,
  "props": Object {
    "fullText": Array [
      "H",
      "e",
      "l",
      "l",
      "o",
      " ",
      "w",
      "o",
      "r",
      "l",
      "d",
      "!"
    ]
  },
  "ref": null,
  "type": [Function Typer]
}
`;
